--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
     "require": {
         "php": "^8.3",
         "ext-ctype": "*",
+        "ext-gmp": "*",
         "ext-iconv": "*",
         "doctrine/dbal": "^4",
         "doctrine/doctrine-bundle": "^2.12",
@@ -29,6 +30,7 @@
         "phpstan/phpdoc-parser": "^1.29",
         "psr/http-factory": "^1.1",
         "psr/http-message": "^2.0",
+        "ramsey/uuid-doctrine": "^2.1",
         "symfony/asset": "~7.1.0",
         "symfony/asset-mapper": "~7.1.0",
         "symfony/console": "~7.1.0",
@@ -59,19 +61,22 @@
         "symfony/web-link": "~7.1.0",
         "symfony/yaml": "~7.1.0",
         "symfonycasts/sass-bundle": "^0.6.0",
+        "tuupola/base62": "^2.1",
         "twig/extra-bundle": "^3.0",
         "twig/twig": "^3.0"
     },
     "require-dev": {
         "captainhook/captainhook": "^5.23",
         "captainhook/plugin-composer": "^5.3",
+        "dama/doctrine-test-bundle": "^8.2",
+        "doctrine/doctrine-fixtures-bundle": "^3.6",
         "ergebnis/composer-normalize": "^2.42",
-        "hamcrest/hamcrest-php": "^2.0",
         "mockery/mockery": "^1.6",
         "php-parallel-lint/php-console-highlighter": "^1.0",
         "php-parallel-lint/php-parallel-lint": "^1.4",
         "phpstan/extension-installer": "^1.3",
         "phpstan/phpstan": "^1.11",
+        "phpstan/phpstan-doctrine": "^1.4",
         "phpstan/phpstan-mockery": "^1.1",
         "phpstan/phpstan-phpunit": "^1.4",
         "phpunit/phpunit": "^11.1",
@@ -129,6 +134,11 @@
         "captainhook": {
             "force-install": true
         },
+        "ramsey/composer-repl": {
+            "includes": [
+                "repl.php"
+            ]
+        },
         "ramsey/conventional-commits": {
             "configFile": "conventional-commits.json"
         },
@@ -163,7 +173,12 @@
         ],
         "lint:fix": "phpcbf --cache=var/phpcs-cache",
         "lint:style": "phpcs --colors --cache=var/phpcs-cache",
-        "lint:syntax": "parallel-lint --colors src tests",
+        "lint:syntax": [
+            "parallel-lint --colors src tests",
+            "bin/console lint:twig templates",
+            "bin/console lint:yaml config",
+            "bin/console lint:container"
+        ],
         "test": [
             "@lint",
             "@analyze",
