--- a/composer.json
+++ b/composer.json
@@ -52,6 +52,7 @@
         "symfony/process": "~7.1.0",
         "symfony/property-access": "~7.1.0",
         "symfony/property-info": "~7.1.0",
+        "symfony/rate-limiter": "~7.1.0",
         "symfony/runtime": "~7.1.0",
         "symfony/security-bundle": "~7.1.0",
         "symfony/serializer": "~7.1.0",
